--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,17 +1,12 @@
 {
-    "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "src/**/*",
-        "use": "@vercel/static"
-      }
+        {"src": "*.js", "use": "@vercel/node"}
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
-  }
+}
