--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
+    "@mui/material": "^5.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@xylabs/react-scroll-to-top": "^5.1.2",
     "axios": "^1.7.7",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
