--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "moongose": "^1.0.0",
     "nodemailer": "^6.9.15",
     "nodemailer-sendgrid-transport": "^0.2.0"
   }
