--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "moongose": "^1.0.0",
     "nodemailer": "^6.9.15",
     "nodemailer-sendgrid-transport": "^0.2.0"
