--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.10",
     "@microsoft/signalr": "^8.0.7",
     "@mui/material": "^5.11.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
