--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@xylabs/react-scroll-to-top": "^5.1.2",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
